Add detailed system architecture, database design, and security configurations
Co-authored-by: ecchanger <ecchanger@proton.me>